force-app/main/default/objects/Document_Analysis__c/Document_Analysis__c.object-meta.xml
<CustomObject>
    <description>Cached AI analysis of a Document__c. One record per analyzed file so Claude is not called repeatedly for the same document.</description>
    <label>Document Analysis</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>