force-app/main/default/objects/Document_Analysis__c/fields/Analyzed_On__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_On__c</fullName>
    <description>When the analysis was last produced.</description>
    <label>Analyzed On</label>
    <type>DateTime</type>
</CustomField>