force-app/main/default/objects/Document_Analysis__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>The S3-backed file this analysis was extracted from. Master-detail so the cache is cleaned up automatically when the file is deleted.</description>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Analyses</relationshipLabel>
    <relationshipName>Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>