force-app/main/default/objects/Document_Analysis__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Claude&apos;s classification of the document (e.g. Medical Record, Police Report, Insurance Letter, Bill).</description>
    <label>Document Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>