force-app/main/default/objects/Document_Analysis__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Failure detail when Status = Failed.</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>