force-app/main/default/objects/Document_Analysis__c/fields/Extracted_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extracted_JSON__c</fullName>
    <description>Full structured fact payload returned by Claude (JSON). Source of truth the LWC renders from.</description>
    <label>Extracted JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>