force-app/main/default/objects/Document_Analysis__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <description>Anthropic input token usage for cost tracking.</description>
    <label>Input Tokens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>