force-app/main/default/objects/Document_Analysis__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized link to the parent Intake for easy reporting and roll-ups across all of a matter&apos;s documents.</description>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Document Analyses</relationshipLabel>
    <relationshipName>Document_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>