force-app/main/default/objects/Document_Analysis__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Anthropic model id used for this analysis (e.g. claude-sonnet-4-6). Lets you re-run when the model changes.</description>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>