force-app/main/default/objects/Document_Analysis__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Plain-language summary of the document produced by Claude.</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>